# rules_prefect

./: .bazelignore  .bazelrc  .gitignore  LICENSE  README.md  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: publish.yaml
examples/simple_flow/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  flow.py  requirements.txt
prefect/: BUILD.bazel  defs.bzl
prefect/private/: BUILD.bazel  deploy.bzl  prefect_runner.py
