"""Example consumer of rules_prefect."""

module(
    name = "simple_flow_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_prefect", version = "0.0.0")
local_path_override(
    module_name = "rules_prefect",
    path = "../..",
)

bazel_dep(name = "rules_python", version = "1.8.4")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
