# gazelle:ignore

load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "deploy",
    srcs = ["deploy.bzl"],
    visibility = ["//prefect:__subpackages__"],
)

py_library(
    name = "_prefect_runner_lib",
    srcs = ["prefect_runner.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
    # No @pip//prefect here — provided by the consumer's pip hub via the macro.
)
